components/Global/ItemCard/styles/genericItem.css
.genericitem-card {
    --thumb-height: 6.5rem;

    background: none;
    border-bottom: var(--border);
    border-radius: 0;
    gap: 12px;
    padding: 10px;

    .info-card-title {
        font-size: 1.2rem;
        font-weight: bold;
        -webkit-line-clamp: 1;
        grid-row: 1/2;
        grid-column: 1/3;
    }

    .info-card-desc {
        grid-row: 2/3;
    }

    .info-card-counts {
        grid-row: 3/4;
        grid-column: 1/2
    }

    .info-card-subtitle {
        grid-row: 2/4;
        place-self: end;
        max-width: 20em;
    }

    .info-card-title, .info-card-subtitle {
        line-height: 1.5rem;
    }

    .info-card-datacolumn {
        display: grid;
        flex: 1;
        grid-template-columns: 1fr auto;
    }

    .info-card-thumbnail > img {
        aspect-ratio: 16 / 9;
    }

    .info-card-durationtext {
        font-size: 0.75rem;
    }
}

.genericitem-owner {
    text-decoration: none;
    pointer-events: auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: end;
    line-height: 1rem;
    gap: 8px;
    width: max-content;
    max-width: 100%;
    border-radius: var(--radius);
    color: var(--textcolor1);

    &:hover {
        color: var(--linktext1);
    }
}

.genericitem-owner-icon {
    height: 1.5rem;
    width: 1.5rem;
    border-radius: 1024px;
    vertical-align: middle;
    margin: 0;
}

.genericitem-card.info-card, .genericitem-card.info-card .info-card-thumbnail {
    overflow: visible;
}

.genericitem-card[data-layout="vertical-simple"] {
    background: var(--bgcolor2);
    border: var(--border);
    border-radius: var(--radius);
    flex-direction: column;
    width: 100%;
    gap: 8px;
    padding: 8px;
    align-items: stretch;

    --thumb-height: auto;

    .info-card-datacolumn {
        display: flex;
        gap: 6px;
    }

    .info-card-title {
        font-size: 0.95rem;
        max-lines: 2;
        height: 3rem;
    }

    .info-card-desc {
        display: none;
    }

    .info-card-subtitle {
        margin-top: 6px;
        place-self: start;
        flex-direction: row;
        width: 100%;
        align-items: center;
        min-height: 2em;
    }

    .info-card-counts {
        min-height: 15px;
    }

    .genericitem-owner {
        flex: 1;
        flex-direction: row;
        align-items: center;
        gap: 4px;
        justify-content: start;
        min-width: 0;
        line-height: 1.25em;

        > span {
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .genericitem-time {
        line-height: 1.25em;
        display: flex;
        align-items: center;
    }

    .genericitem-time svg {
        height: 1.25em;
    }
}

.genericitem-card[data-layout="horizontal-simple"] {
    border-radius: var(--radius);
    padding: 6px;
    
    & .info-card-desc {
        display: none;
    }

    & .info-card-datacolumn {
        display: flex;
    }

    & .info-card-subtitle {
        place-self: start;

        .genericitem-owner {
            flex-direction: row;
            align-items: center;
            gap: 4px;
        }

        .genericitem-owner-icon {
            height: 1.25rem;
            width: 1.25rem;
        }
    }
}

.videoitem-muted-overlay {
    display: grid;
    place-content: center;
    height: 100%;
    background: repeating-linear-gradient(45deg, var(--bgcolor1), var(--bgcolor1) 10px, var(--bgcolor2) 10px, var(--bgcolor2) 20px);
    border-radius: var(--radius-mini);

    svg {
        width: 4rem;
        height: 4rem;
        opacity: 1;
        color: var(--bgcolor3);
    }
}

